2009-06-19  Sven Herzberg  <herzi@lanedo.com>

	NB#117873 - Dim insensitive icons with transparency instead of
	rasterizing.

	* engine/sapwood-style.c (set_transparency), (scale_or_ref),
	(render_icon): patch from Daniel Borgmann

2009-06-19  Sven Herzberg  <herzi@lanedo.com>

	NB#110565 - sapwood-server server prints debugging stuff to console

	* server/sapwood-server.c (main): only display the message when we are
	in debugging mode

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	NB#103175 - Sapwood crashes when large windows trigger BadAlloc errors

	* engine/theme-pixbuf.c (theme_pixbuf_render): enable the gdk_flush()
	call between the error traps

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	About NB#103175 - Sapwood crashes when large windows trigger BadAlloc
	errors

	Added a testcase

	* tests/Makefile.am: build and run the testcase
	* tests/large-window.c (text_view_mapped), (main),
	* tests/large-window.gtkrc: the testcase files

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	Properly execute tests against the correct modules

	* tests/Makefile.am: also use the script from the demos folder
	* tests/sapwood-wrapper: point to the correct module

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Comment out my hildon-specific hack in the server wrapper file

	* tests/sapwood-wrapper: drop this

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Do the GdkPixbuf rendering with cairo

	* server/sapwood-server.c (extract_pixmap_single): do the rendering
	with cairo; we will have to use this code anyway once we don't have a
	GdkPixmap anymore and use an RGBA cairo_xlib_surface_t

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Test if the server can run the buttonbox demo

	* demos/Makefile.am: added the buttonbox to the tests
	* demos/buttonbox.c (main): return after showing the window if a
	proper environment variable was set

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Compile against a vanilla GTK+
